--- a/UnitySwift/Base.lproj/Main.storyboard
+++ b/UnitySwift/Base.lproj/Main.storyboard
@@ -18,23 +18,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o3X-OH-8os">
-                                <rect key="frame" x="403" y="176.5" width="90" height="31"/>
+                                <rect key="frame" x="409" y="176.5" width="78" height="31"/>
                                 <color key="backgroundColor" name="AccentColor"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="StartUnity"/>
+                                <buttonConfiguration key="configuration" style="plain" title="InitUnity"/>
                                 <connections>
                                     <action selector="startUnity:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hdw-Fg-ZR2"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KnJ-Aa-Ivx">
-                                <rect key="frame" x="396" y="261.5" width="104" height="31"/>
-                                <color key="backgroundColor" systemColor="systemPinkColor"/>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="UnloadUnity"/>
-                                <connections>
-                                    <action selector="startUnity:" destination="BYZ-38-t0r" eventType="touchUpInside" id="90e-vN-EhA"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="iOS Native Screen" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="syW-FC-roi">
@@ -50,8 +40,6 @@
                         <constraints>
                             <constraint firstItem="o3X-OH-8os" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" constant="-4.5" id="AIg-Im-wdW"/>
                             <constraint firstItem="o3X-OH-8os" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Vcy-US-6TT"/>
-                            <constraint firstItem="KnJ-Aa-Ivx" firstAttribute="top" secondItem="o3X-OH-8os" secondAttribute="bottom" constant="54" id="ZAZ-oq-P2Z"/>
-                            <constraint firstItem="KnJ-Aa-Ivx" firstAttribute="centerX" secondItem="o3X-OH-8os" secondAttribute="centerX" id="uhA-fF-3Ye"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -66,9 +54,6 @@
         </namedColor>
         <systemColor name="systemGray6Color">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemPinkColor">
-            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
